tests/ui/pattern/usefulness/slice-patterns-reachability.stderr
error: multiple unreachable patterns
  --> $DIR/slice-patterns-reachability.rs:8:9
   |
LL |         [true, ..] => {}
   |         ^^^^^^^^^^^^^^^^ this arm is never executed
...
LL |         [true] => {}
   |         ^^^^^^^^^^^^ this arm is never executed
   |
note: the lint level is defined here
  --> $DIR/slice-patterns-reachability.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: multiple unreachable patterns
  --> $DIR/slice-patterns-reachability.rs:17:9
   |
LL |         [.., true] => {}
   |         ^^^^^^^^^^^^^^^^ this arm is never executed
...
LL |         [true] => {}
   |         ^^^^^^^^^^^^ this arm is never executed

error: multiple unreachable patterns
  --> $DIR/slice-patterns-reachability.rs:26:9
   |
LL |         [false, .., true] => {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^ this arm is never executed
...
LL |         [false, true] => {}
   |         ^^^^^^^^^^^^^^^^^^^ this arm is never executed

error: aborting due to 3 previous errors

